--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,90 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    font-family: sans-serif;
+    font-family: 'Work Sans', sans-serif;
     font-size: 16px;
+    background-color: #f8f8f8;
+}
+main {
+    margin: 0 auto;
+    width: 90%;
+}
+h1 {
+    font-size: 3rem;
+    margin: 10px 10px;
+}
+.overlay{
+    height: 500px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items:center; 
+    justify-content: center;
+}
+.question-form {
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
+}
+.question-item {
+    padding: 10px 0;
+    border-bottom: 1px solid black;
+    margin: 5px;
+}
+.question{
+    padding-bottom: 10px;
+    font-size: 1.3rem;
+}
+.container--answers {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.answer {
+    font-weight: 400;
+    text-align: center;
+    min-width: 150px;
+    margin: 10px 10px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 50px;
 }
 .chosen { 
-    color: blue;
+    color: #0d6efd;
+    background-color: #cfe2ff;
+    border-color: #0d6efd;
 }
 .correct{
-    color: green;
+    color: #198754;
+    border-color:  #198754;
+    background-color: #d1e7dd;
 }
 .wrong {
-    color: red;
+    color: #dc3545;
+    background-color: #f8d7da;
+    border-color: #dc3545;
+}
+.btn--start, .btn--submit {
+    padding: 10px;
+    border: 1px solid #0d6efd;
+    background-color: #cfe2ff;
+    border-radius: 50px;
+    font-family: inherit;
+    font-size: 1.4rem;
+    color: #0d6efd;
+    width: 200px;
+}
+.finish-message {
+    font-size: 2.5rem;
 }
