--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,10 @@ main {
 h1 {
     font-size: 3rem;
     margin: 10px 10px;
+    letter-spacing: 0.4rem;
+    color:#dc3545;
+    border-bottom: 2px solid #dc3545;
+    width: 450px;
 }
 .overlay{
     height: 500px;
@@ -24,6 +28,7 @@ h1 {
     align-items: center;
     justify-content: center;
     font-size: 3rem;
+    font-weight: 400;
 }
 .container {
     display: flex;
